# s-band_transceiver_payload

./: .gitignore  CMakeLists.txt  README.md  pico_sdk_import.cmake
config/: config.c  config.h
docs/: adafruit_rfm9x.py  arch.puml  how_to_hack_a_mcp2515_to_run_on_3_3_volts.md  logical.puml  radio_configuration_flow.md  sequence.puml  sequence2.puml  sx1280_saga.md  testing.md
include/: debug.h
include/core/: config.h  message_queue.h
include/drivers/can/: peripheral_mcp2515.h
include/drivers/radio/: peripheral_lora1280.h
include/freertos/: task_can.h  task_housekeeping.h  task_radio.h
include/protocols/: protocol_spacecan.h
include/subsystems/housekeeping/: housekeeping.h
src/: SX1280.cpp  SX1280.h  bus_config.c  bus_config.h  config.c  housekeeping.c  init_tasks.c  init_tasks.h  lora_defs.h  main.c  message_queue.c  message_queue.h  peripheral_lora1280.c  peripheral_lora1280.h  peripheral_mcp2515.c  peripheral_mcp2515.h  protocol_rf_command.c  protocol_rf_command.h  protocol_spacecan.c  protocol_spacecan.h  sx1280_wrapper.cpp  sx1280_wrapper.h  task_can.c  task_housekeeping.c  task_radio.c
src/core/: config.c  message_queue.c
src/drivers/can/: mcp2515_regs.h  peripheral_mcp2515.c
src/drivers/radio/: SX1280.cpp  SX1280.h  peripheral_lora1280.c  peripheral_rfm9x.c  peripheral_rfm9x.h  radio_hal.c  radio_hal.h  sx1280_wrapper.cpp  sx1280_wrapper.h
src/drivers/spi/: bus_config.c  bus_config.h
src/freertos/: init_tasks.c  task_can.c  task_housekeeping.c  task_radio.c
src/protocols/: protocol_spacecan.c  spacecan_assembler.c  spacecan_assembler.h
src/subsystems/housekeeping/: housekeeping.c
